--- a/templates/filter_header.html
+++ b/templates/filter_header.html
@@ -1,15 +1,15 @@
 {% load staticfiles %}
 <script type="text/javascript" src="{% static "js/selects.js" %}"></script>
 
-<form name="filter" action="." method="GET" accept-charset="UTF-8" autocomplete="off">
+<form name="filter" action="." method="GET" accept-charset="UTF-8" autocomplete="off" style="padding-bottom: 6px;">
     <table align="center">
         <tr>
-            <th colspan="2" style="padding-bottom: 18px; font-size: 28px;">Поиск</th>
+            <th colspan="2" style="padding-bottom: 12px; font-size: 34px;" class="filter_text" >Поиск</th>
         </tr>
 
         <tr>
-            <th>ФИО</th>
-            <th>Прокуратуре</th>
+            <th class="filter_text">ФИО</th>
+            <th class="filter_text">Прокуратура</th>
         </tr>
         <tr>
             <th><input type="text" name="employee" size="30"></th>
@@ -21,8 +21,8 @@
             </select></th>
         </tr>
         <tr>
-            <th>Телефон</th>
-            <th>Управление</th>
+            <th class="filter_text">Телефон</th>
+            <th class="filter_text">Управление</th>
         </tr>
         <tr>
             <th><input type="text" name="telephone" size="30"></th>
@@ -32,7 +32,7 @@
         </tr>
         <tr>
             <th></th>
-            <th>Отдел</th>
+            <th class="filter_text">Отдел</th>
         </tr>
         <tr>
             <th></th>
@@ -41,8 +41,9 @@
             </select></th>
         </tr>
         <tr>
-            <th><input type="reset" value="Очистить" style=" font-family:Arial, Helvetica, sans-serif;font-size: 16px;"></th>
-            <th><input type="submit" value="Поиск"></th>
+            <th><input type="reset" value="Очистить" class="button"></th>
+            <th><input type="submit" value="Поиск" class="button"></th>
         </tr>
     </table>
 </form>
+<br>
