--- a/templates/filter_header.html
+++ b/templates/filter_header.html
@@ -40,10 +40,8 @@
                 <option selected disabled>Выберите Отдел</option>
             </select></th>
         </tr>
-        <tr>
-            <th><input type="reset" value="Очистить" class="button"></th>
-            <th><input type="submit" value="Поиск" class="button"></th>
-        </tr>
     </table>
+    <div align="center"><input type="reset" value="Очистить" class="button1">
+        <input type="submit" value="Поиск" class="button2"></div>
 </form>
 <br>
